# 14-Device-backend-django

./: .env_template  .gitignore  Dockerfile  README.md  consumer.py  docker-compose.yml  main.py  nginx.conf  parser.py  proxy.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py  orm_models.py  repository.py
app/models/: orm_models.py  pydantic_models.py
app/pages/: router.py
app/utils/: helpers.py
backend/django_app/db_device/: manage.py
django_app/: Dockerfile  requirements.txt  script.sh
django_app/db_device/: script.sh
django_app/db_device/account/: urls.py  views.py
django_app/db_device/db_device/: settings.py  urls.py  wsgi.py
django_app/db_device/device/: admin.py  consumer.py  models.py  permissions.py  producer.py  serializers.py  urls.py  views.py
django_app/db_device/fixtures/: clean_admin.json  clean_with_superuser.json  db.json  db_20240918.json  db_20240918_new_address_region.json  device.json  metering_unit.json
django_app/db_device/for_page/: apps.py  serializers.py  tests.py  urls.py  views.py
django_app/db_device/metering_unit/: admin.py  apps.py  baseserializers.py  mixins.py  models.py  serializers.py  urls.py  views.py
django_app/db_device/my_auth/: apps.py  serializers.py  urls.py  views.py
django_app/db_device/utils/: modify_address.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: Addresses.jsx  Devices.jsx  Header.jsx  Menu.jsx  Verivication.jsx  (+3 more)
migrations/: env.py
migrations/versions/: 0decd446fcc2_init.py
(+59 files in other folders)
