[tool.poetry]
name = "14-Device"
version = "0.1.0"
description = ""
authors = ["Alexey Inkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
requests = "^2.32.3"
loguru = "^0.7.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


